--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 # Faz a instalação com Sudo, para ter privilégio de Super Usuário.
 sudo: required
 
-# Instalação de Módulos que são necessários para a Aplicação.
+# Instalação de Módulos que são necessários para a Aplicação.''
 install:
   - pip install flask
 
@@ -19,6 +19,6 @@ script:
 # Defini que o processo de Deploy será na Plataforma Heroku. É necessário informar o nome da APP criada no Heroku
 deploy:
   provider: heroku
-  api-key: 
+  api_key: 
     secure: $HEROKU_API_KEY
   app: app4linux
